Removing unneeded java.lang. from Float & Double